--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chart.js": "^4.3.3",
     "hero-slider": "^3.2.0",
     "leaflet": "^1.9.4",
+    "leaflet-draw": "^1.0.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-chartjs-2": "^5.2.0",
